--- a/css/styles.css
+++ b/css/styles.css
@@ -147,3 +147,32 @@ picture img {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+@media (max-width: 600px) {
+  body {
+    height: 100%;
+    width: 100%;
+    background-image: url("/images/pattern-background-mobile.svg");
+    background-color: var(--primary-pale-blue);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  main {
+    width: 100%;
+    margin-top: 0;
+  }
+
+  picture img {
+    height: 35vh;
+    border-top-left-radius: 0em;
+    border-top-right-radius: 0em;
+  }
+
+  .plan {
+    border-top-left-radius: 0em;
+    border-top-right-radius: 0em;
+    border-bottom-left-radius: 0em;
+    border-bottom-right-radius: 0em;
+  }
+}
